--- a/css/ppa.css
+++ b/css/ppa.css
@@ -1,1 +1,10 @@
-#map { height: 180px; }
+body {
+    padding: 0;
+    margin: 0;
+}
+
+#map {
+	min-height: 800px;
+    height: 100%;
+    width: 100%;
+}
